fix: Some menu in canvas not showing in phone screen

--- a/theme.css
+++ b/theme.css
@@ -1187,6 +1187,10 @@ tr:last-child td:last-child {
   margin: unset !important;
 }
 
+.is-phone .canvas-menu .menu {
+  left: unset !important;
+}
+
 /* ------------------------------------------------------------------------------------ */
 /* MODAL, MENU, PROMPT */
 .suggestion-container,
